test/files/neg/noMember1.scala
import scala.collection.mutable.MultiMap._

class A
